[workspace]
members = ["native", "lexer", "wasm"]
resolver = "2"

[profile.release.package.cjs-module-lexer]
opt-level = "z"

[profile.release]
debug = false
# optimization for size (more aggressive)
opt-level = 3
# less code to include into binary
panic = "abort"
strip = "symbols"
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
